tests/negative/regression/r25.orng
fn main() -> Int { } 

fn (ident: Int) -> fn() -> (while ident {}) { } { 
    
} 
